force-app/main/default/objects/sc_ext__User_Config__c/fields/sc_ext__SI_Show_Excluded_Rows__c.field-meta.xml
<CustomField>
    <fullName>sc_ext__SI_Show_Excluded_Rows__c</fullName>
    <defaultValue>true</defaultValue>
    <label>SI - Show Excluded Rows</label>
    <type>Checkbox</type>
</CustomField>