force-app/main/default/objects/sc_ext__User_Config__c/fields/sc_ext__Use_Files__c.field-meta.xml
<CustomField>
    <fullName>sc_ext__Use_Files__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use Salesforce Files</label>
    <type>Checkbox</type>
</CustomField>