force-app/main/default/objects/sc_ext__User_Config__c/fields/sc_ext__User__c.field-meta.xml
<CustomField>
    <fullName>sc_ext__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>User Configs</relationshipLabel>
    <relationshipName>User_Configs</relationshipName>
    <type>Lookup</type>
</CustomField>