force-app/main/default/objects/sc_ext__User_Config__c/fields/sc_ext__User_Id__c.field-meta.xml
<CustomField>
    <fullName>sc_ext__User_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>User Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>